--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.977 2023-05-11
+  [Incompatible Changes]
+    * The definition of the call_init_blocks native API is changed.
+      [Before]
+      void (*call_init_blocks)(SPVM_ENV* env);
+      [After]
+      void (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);
 0.976 2023-05-09
   [New Features]
     * Added the Immutable::ByteList class.
