--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@
       [Before]
       void (*call_init_blocks)(SPVM_ENV* env);
       [After]
-      void (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);
+      int32_t (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);
 0.976 2023-05-09
   [New Features]
     * Added the Immutable::ByteList class.
