--- a/Changes
+++ b/Changes
@@ -25,6 +25,10 @@
       void (*cleanup_global_vars)(SPVM_ENV* env, SPVM_VALUE* stack);
       [After]
       void (*cleanup_global_vars)(SPVM_ENV* env);
+  [Changes]
+    * The simple constructor inline expansion is removed.
+    * The constant method inline expansion is removed.
+    
 0.976 2023-05-09
   [New Features]
     * Added the Immutable::ByteList class.
