--- a/Changes
+++ b/Changes
@@ -28,6 +28,7 @@
   [Changes]
     * The simple constructor inline expansion is removed.
     * The constant method inline expansion is removed.
+    * INIT blocks that is the super class or used classes are automatically called.
     
 0.976 2023-05-09
   [New Features]
