--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.978 2023-05-13
+  [Incompatible Changes and Bug Fix]
+    * Fixed the bug that precidence of operators are wrong. The precidence must be the same as Perl.
+      
+    
 0.977 2023-05-11
   [Incompatible Changes]
     * The definition of the following native APIs are changed.
