Changes is updated

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.980001 2023-05-20
+  [Changes]
+    * Internal changes only.
 0.980 2023-05-19
   [Compilation Error Message Improvement]
     * Some compilation error messages are improved.
