The bug that the allow statemenet throws segfault.
  [Bug Fix]
    * The bug that the allow statemenet throws segfault.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * The bug of array init reference count is fixed.
     * The bug of anon method reference count is fixed.
     * The bug of setting field reference count is fixed.
+    * The bug that the allow statemenet throws segfault.
   [Incompatible Changes]
     * The refcnt operator is removed. The reference count is managed internally, not user land.
     
