--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.989 2023-06-05
+  [New Features]
+    * The get_object_basic_type_name Native API was added.
   [Incompatible Changes]
     * Many Native APIs will be changed in this release.
       The IDs of the symbol will not be published to the user.
