--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.989 2023-06-05
   [New Features]
     * The get_object_basic_type_name Native API was added.
+    * The isa_by_name Native API was added.
   [Warning]
     * Many Native APIs will be changed in the nearly release.
       The IDs of the symbol will not be published to the user.
