--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
   [New Features]
     * The get_object_basic_type_name Native API was added.
     * The isa_by_name Native API was added.
+    * The can_assign Native Runtime API was added.
   [Warning]
     * Many Native APIs will be changed in the nearly release.
       The IDs of the symbol will not be published to the user.
