--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.989002 2023-06-08
+  [Incompatible Changes]
+    * The error operator was renamed to the eval_error_id operator.
 0.989001 2023-06-07
   [Incompatible Changes]
     * The new_stack_trace_by_name Native API was removed.
