--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.989002 2023-06-08
+  [New Features]
+    * The basic_type_id operator was added.
   [Incompatible Changes]
     * The error operator was renamed to the eval_error_id operator.
 0.989001 2023-06-07
