--- a/Changes
+++ b/Changes
@@ -26,6 +26,8 @@
       21 SPVM_NATIVE_C_BASIC_TYPE_ID_COMMAND_INFO_CLASS
       22 SPVM_NATIVE_C_BASIC_TYPE_ID_ADDRESS_CLASS
 
+  [New Features]
+    * The basic_type_id operator was added.
   [Incompatible Changes]
     * The error operator was renamed to the eval_error_id operator.
 0.989001 2023-06-07
