--- a/Changes
+++ b/Changes
@@ -1,3 +1,31 @@
+0.989002 2023-06-08
+  [Document Bug]
+    * The basic type IDs were wrong. This was fixed.
+    
+      0  SPVM_NATIVE_C_BASIC_TYPE_ID_UNKNOWN
+      1  SPVM_NATIVE_C_BASIC_TYPE_ID_UNDEF
+      2  SPVM_NATIVE_C_BASIC_TYPE_ID_VOID
+      3  SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE
+      4  SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT
+      5  SPVM_NATIVE_C_BASIC_TYPE_ID_INT
+      6  SPVM_NATIVE_C_BASIC_TYPE_ID_LONG
+      7  SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT
+      8  SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE
+      9  SPVM_NATIVE_C_BASIC_TYPE_ID_STRING
+      10 SPVM_NATIVE_C_BASIC_TYPE_ID_ANY_OBJECT
+      11 SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE_CLASS
+      12 SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT_CLASS
+      13 SPVM_NATIVE_C_BASIC_TYPE_ID_INT_CLASS
+      14 SPVM_NATIVE_C_BASIC_TYPE_ID_LONG_CLASS
+      15 SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT_CLASS
+      16 SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE_CLASS
+      17 SPVM_NATIVE_C_BASIC_TYPE_ID_BOOL_CLASS
+      18 SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_CLASS
+      19 SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS
+      20 SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_NOT_SUPPORTED_CLASS
+      21 SPVM_NATIVE_C_BASIC_TYPE_ID_COMMAND_INFO_CLASS
+      22 SPVM_NATIVE_C_BASIC_TYPE_ID_ADDRESS_CLASS
+
 0.989001 2023-06-07
   [Incompatible Changes]
     * The new_stack_trace_by_name Native API was removed.
