--- a/Changes
+++ b/Changes
@@ -32,6 +32,7 @@
     * The error operator was renamed to the eval_error_id operator.
     * The class_id operator was removed.
     * The code field in the ExchangeAPI::Error class was renamed to the id field.
+    * The set_error_code operator was removed.
 0.989001 2023-06-07
   [Incompatible Changes]
     * The new_stack_trace_by_name Native API was removed.
